# zellij-workbench

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: zw.rb
docs/: demo.md  index.html  index.zh-CN.html  tui-development-guide.html  tui-development-guide.md  tui-development-guide.zh-CN.html  tui-development-guide.zh-CN.md
docs/demo/: workbench.tape
scripts/: demo-fixture.sh
src/: commands.rs  config.rs  db.rs  main.rs  model.rs  tui.rs  util.rs  zellij.rs
tests/: local_scan.rs  multi_host_ssh.rs
tests/support/: mod.rs
